--- a/src/Content/AboutMe/AboutMe.module.css
+++ b/src/Content/AboutMe/AboutMe.module.css
@@ -1,5 +1,8 @@
 .about_me {
-    background-color: blue;
+    background-color: #343a40;
+}
+
+.about_me_container {
     margin: 0 auto;
     width: 80%;
 }
