--- a/src/Content/Home/Home.module.css
+++ b/src/Content/Home/Home.module.css
@@ -1,15 +1,41 @@
 .home {
     margin: 0 auto;
-    width: 80%;
-    /*height: 900px;*/
+    width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #1dc41d;
+    position: relative;
+
+    /*background-image: url(../../image/background_home.jpg);*/
+    /*background-size: cover;*/
+    /*background-position: center center;*/
+    /*background-repeat: no-repeat;*/
 }
 
+.home:before {
+    z-index:1;
+    position:absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    left:0;
+    top:0;
+    background-image: url(../../assets/image/background_home.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    opacity: 0.7;
+    /*overflow: hidden;*/
+}
+
+
 .home_content {
+    position: absolute;
+
+    z-index: 2;
     width: 415px;
     display: flex;
     flex-direction: column;
