--- a/src/Content/Services/Services.module.css
+++ b/src/Content/Services/Services.module.css
@@ -1,5 +1,8 @@
 .services {
-    background-color: red;
+    background-color: #212529;
+}
+
+.services_container {
     margin: 0 auto;
     width: 80%;
 }
@@ -12,4 +15,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 1020px) {
+    .services_item {
+        justify-content: center;
+    }
 }
