--- a/src/Saidbar/Navbar/Nav.module.css
+++ b/src/Saidbar/Navbar/Nav.module.css
@@ -1,6 +1,6 @@
 .nav {
     width: 200px;
-    border: 1px solid;
+    /*border: 1px solid;*/
     margin: 10px;
 }
 .nav_items {
@@ -13,12 +13,17 @@
 }
 
 .nav_item {
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 .nav_items a {
     text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+}
 
+.nav_items a:hover {
+    color: #20c997;
 }
 
 
