--- a/src/Saidbar/Sidebar.module.css
+++ b/src/Saidbar/Sidebar.module.css
@@ -1,7 +1,7 @@
 .sidebar {
-    min-width: 250px;
+    min-width: 290px;
     min-height: 100vh;
-    background-color: green;
+    background-color: #111418;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -11,4 +11,12 @@
     top:0;
     left: 0;
     overflow: hidden;
+}
+
+@media (max-width: 1000px) {
+    .sidebar {
+        display: none;
+        /*overflow: hidden;*/
+        /*transform: scale(0);*/
+    }
 }
