add useState in App, add burger

--- a/src/Saidbar/Avatar/Avatar.module.css
+++ b/src/Saidbar/Avatar/Avatar.module.css
@@ -10,7 +10,7 @@
     color: #20c997;
     text-decoration: none;
     transition: all 0.2s ease;
-    font-family: "Poppins", sans-serif;
+    font-family: "Lato", sans-serif;
 }
 
 .avatar_span_img {
