--- a/src/Content/Content.module.css
+++ b/src/Content/Content.module.css
@@ -1,10 +1,18 @@
 .content {
     display: block;
     margin: 0 0 0 290px;
+    /*margin: 0;*/
+    /*flex: 3;*/
     width: 100%;
     height: 100%;
-    position: static;
+    /*position: static;*/
     background: #dddddd;
     color: #4c4d4d;
     font-family: "Lato", sans-serif;
+}
+
+@media (max-width: 1000px) {
+    .content {
+        margin: 0;
+    }
 }
