--- a/src/Saidbar/Navbar/Nav.module.css
+++ b/src/Saidbar/Navbar/Nav.module.css
@@ -3,6 +3,9 @@
     /*border: 1px solid;*/
     margin: 10px;
 }
+.nav_hidden {
+    display: none;
+}
 .nav_items {
     margin-left: -40px;
     display: flex;
