--- a/src/Saidbar/Sidebar.module.css
+++ b/src/Saidbar/Sidebar.module.css
@@ -2,6 +2,7 @@
     min-width: 290px;
     min-height: 100vh;
     background-color: #111418;
+    /*flex: 1;*/
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -16,7 +17,5 @@
 @media (max-width: 1000px) {
     .sidebar {
         display: none;
-        /*overflow: hidden;*/
-        /*transform: scale(0);*/
     }
 }
