--- a/src/Content/Header/Header.module.css
+++ b/src/Content/Header/Header.module.css
@@ -5,10 +5,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    z-index: 10000;
 }
 
 .header_logo {
-    flex:70%;
     display: inline-block;
     padding: 20px 0 20px 10px;
     font-weight: 700;
@@ -18,10 +19,13 @@
 }
 
 .icons {
-    flex:20%;
+    margin-right: 60px;
 }
 .icons a {
     margin-right: 20px;
+}
+
+.div_burger_menu {
 }
 
 .vk_icon:hover {
@@ -29,8 +33,9 @@
 }
 
 .nav_toggle {
+    /*display: block;*/
     width: 30px;
-    padding: 3px 0;
+    padding: 7px 0;
 
     font-size: 0;
     color: #dddddd;
@@ -109,7 +114,7 @@
     transform: rotate(-45deg) translateX(-3px);
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
     .header {
         display: none;
     }
