--- a/src/Saidbar/Navbar/Nav.module.css
+++ b/src/Saidbar/Navbar/Nav.module.css
@@ -1,11 +1,27 @@
+/*.header_nav {*/
+/*    position: absolute;*/
+/*    top: 99%;*/
+/*    right: 0;*/
+/*    left: 0;*/
+/*    background: #fff;*/
+/*    margin-top: 0px;*/
+/*    z-index: 1000;*/
+/*    -webkit-box-shadow: 0px 0px 15px rgb(0 0 0 / 10%);*/
+/*    box-shadow: 0px 0px 15px rgb(0 0 0 / 10%);*/
+/*}*/
+
+
+
 .nav {
     width: 200px;
     /*border: 1px solid;*/
     margin: 10px;
 }
+
 .nav_hidden {
     display: none;
 }
+
 .nav_items {
     margin-left: -40px;
     display: flex;
