remade Form,Home,AbouteMe,Sidebar component

--- a/src/Content/Content.module.css
+++ b/src/Content/Content.module.css
@@ -8,7 +8,7 @@
     /*position: static;*/
     background: #dddddd;
     color: #4c4d4d;
-    font-family: "Lato", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 @media (max-width: 1200px) {
