--- a/src/Content/AboutMe/AboutMe.module.css
+++ b/src/Content/AboutMe/AboutMe.module.css
@@ -1,10 +1,14 @@
 .about_me {
+    padding: 50px 0;
     background-color: #343a40;
+    position: relative;
+    overflow: hidden;
+    height: auto;
 }
 
 .about_me_container {
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
 }
 
 .about_me_content {
@@ -13,17 +17,89 @@
 
 .about_me_info {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
 }
 
-.about_me_stats {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
+.about_me_info_text {
+    width: 60%;
 }
 
-.about_me_title {
+.about_me_info_text h2{
+    color: rgba(255,255,255);
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.about_me_info_text h2 span{
+    color: #20c997;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.about_me_info_text h2 span:last-child{
+    display: block;
+    color: #fff;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.about_me_info_text p{
+    color: rgba(255,255,255,.5);
+    font-size: 17px;
+}
+
+.about_me_info_text p:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.about_me_info_form {
+    width: 40%;
     text-align: center;
 }
+
+.about_me_info_form ul {
+    font-size: 16px;
+    color: #20c997;
+    list-style-type: none;
+}
+
+.about_me_info_form ul li {
+    padding: 10px 0;
+    border-bottom: 1px solid rgba(250, 250, 250, 0.12);
+}
+
+.about_me_info_form ul span {
+    color: #fff;
+    margin-right: 5px;
+}
+
+.about_me_info_form ul a {
+    color: #20c997;
+    text-decoration: none;
+}
+
+.about_me_btn {
+    margin-left: 50px;
+    padding: 12px 45px;
+    font-size: 20px;
+    font-weight: 500;
+    border: 2px solid #20c997;
+    border-radius: 28px;
+    transition: all 0.5s ease;
+    display: inline-block;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    color: #fff;
+    margin-top: 10px;
+    background-color: #20c997;
+}
+
+.about_me_btn:hover {
+    background-color: #1baa80;
+    border-color: #1baa80;
+}
+
+
