--- a/src/Content/Home/Home.module.css
+++ b/src/Content/Home/Home.module.css
@@ -1,4 +1,7 @@
+/*My Style/////////////////////////////////////////////////////////////*/
 .home {
+    font-family: "Poppins", sans-serif;
+    color: #fff;
     margin: 0 auto;
     width: 100%;
     height: 100vh;
@@ -7,39 +10,86 @@
     justify-content: center;
     align-items: center;
     position: relative;
-
-    /*background-image: url(../../image/background_home.jpg);*/
-    /*background-size: cover;*/
-    /*background-position: center center;*/
-    /*background-repeat: no-repeat;*/
+    background: linear-gradient(to bottom, #212529, #343a40);
 }
 
 .home:before {
-    z-index:1;
-    position:absolute;
+    z-index: 1;
+    position: absolute;
     content: "";
     display: block;
     width: 100%;
     height: 100%;
-    left:0;
-    top:0;
+    left: 0;
+    top: 0;
     background-image: url(../../assets/image/background_home.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    opacity: 0.7;
+    opacity: 0.5;
+
     /*overflow: hidden;*/
 }
 
-
-.home_content {
-    position: absolute;
-
+.home_row {
     z-index: 2;
-    width: 415px;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
+.home_content {
+    margin: auto;
+    max-width: 560px;
+    text-align: center;
+    width: 100%
+}
+
+.home_sup_title {
+    font-size: 35px;
+    font-weight: 500;
+    margin-bottom: 50px;
+}
+
+.home_title {
+    font-size: 50px;
+    font-weight: 600;
+}
+
+.home_title span {
+    display: block;
+    font-size: 30px;
+    color: #dee3e4;
+}
+
+.home_address {
+    font-size: 25px;
+    color: #dee3e4;
+    margin-top: 20px;
+    margin-bottom: 90px;
+}
+
+.home_btn {
+    padding: 12px 45px;
+    font-size: 20px;
+    font-weight: 500;
+    border: 2px solid #20c997;
+    border-radius: 28px;
+    transition: all 0.5s ease;
+    display: inline-block;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    color: #20c997;
+    margin-top: 10px;
+}
+
+.home_btn:hover {
+    background-color: #20c997;
+    border-color: #20c997;
+    color: #fff;
+}
