--- a/src/Saidbar/Avatar/Avatar.module.css
+++ b/src/Saidbar/Avatar/Avatar.module.css
@@ -2,33 +2,43 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 30px;
 }
 
 .avatar_a {
+    display: block;
+    font-family: "Poppins", sans-serif;
     margin-bottom: auto;
     margin-top: 1.5rem;
     color: #20c997;
     text-decoration: none;
     transition: all 0.2s ease;
-    font-family: "Lato", sans-serif;
 }
 
 .avatar_span_img {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+
+    width: 185px;
+    height: 185px;
     background-color: #343a40;
+    border-radius: 50%;
 }
 
 .avatar_img {
     margin: 0 auto;
-    width: 150px;
-    height: 200px;
-    display: block;
-    border-radius: 50px;
+    width: 165px;
+    height: 165px;
+    border-radius: 50%;
 }
 
-.avatar_header {
+.avatar_name {
+    font-family: "Poppins", sans-serif;
     margin-top: 15px;
     font-size: 23px;
-    font-weight: 700;
+    font-weight: 500;
     color: #fff;
     text-align: center;
     text-decoration: none;
