--- a/src/Saidbar/Footer/Footer.module.css
+++ b/src/Saidbar/Footer/Footer.module.css
@@ -1,6 +1,18 @@
 .footer {
-    width: 100px;
-    height: 20px;
-
-    border: 1px solid;
+    background-color: #111418;
+    margin-bottom: 15px;
 }
+
+.footer a {
+    margin-right: 25px;
+}
+
+.footer a:last-child {
+    margin-right: 0px;
+}
+
+.footer a:hover {
+   opacity: 0.5;
+}
+
+
