--- a/src/Content/Form/Contacts.module.css
+++ b/src/Content/Form/Contacts.module.css
@@ -3,24 +3,28 @@ p {
 }
 
 .form {
+    font-family: "Poppins", sans-serif;
     background-color: #212529;
     position: relative;
 }
 
 .form_container {
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .form_items {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-top: 40px;
 }
 
 .form_items h2 {
     padding: 0;
-    margin: 0;
+    margin-bottom: 10px;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
@@ -31,8 +35,25 @@ p {
     width: 33.33333%;
 }
 
-.form_info p span {
+.form_info_p_address {
+    margin-bottom: 15px;
+}
+
+.form_info p span:not(.form_info_email) {
     display: block;
+    font-size: 18px;
+    color: #dee3e4;
+    line-height: 1.8;
+}
+
+.form_info_email {
+    font-size: 16px;
+    color: #dee3e4;
+    letter-spacing: -1px;
+}
+.phone_svg,
+.mail_svg {
+    margin-right: 10px;
 }
 
 .forms {
@@ -47,24 +68,36 @@ p {
     padding: 0;
 }
 
+.follow li:not(:first-child){
+    margin-left: 20px;
+}
+
+svg:hover path{
+    fill:yellow;
+}
+
 .forms_flex {
     display: flex;
     flex-wrap: wrap;
 }
 
-.form_name_input {
+.form_name_input,
+.form_email_input {
+    flex: 0 0 auto;
+    width: 48%;
     flex-shrink: 0;
-    width: 100%;
     max-width: 100%;
+}
+
+.form_name_input {
     margin-top: 15px;
 }
 
 .form_email_input {
-    flex-shrink: 0;
-    width: 100%;
-    max-width: 100%;
+    margin-left: 24px;
     margin-top: 15px;
 }
+
 
 .form_textarea_input {
     flex-shrink: 0;
@@ -74,19 +107,25 @@ p {
 }
 
 .form_control {
+    font-family: "Poppins", sans-serif;
     display: block;
     width: 100%;
     font-size: 16px;
-    border-color: #232a31;
-    background: #232a31;
+    background: #343a40;
     color: #fff;
     padding: 10px 12px;
     font-weight: 400;
     line-height: 1.5;
-    /*border: 1px solid #ced4da;*/
+    border: 1px solid #343a40;
     appearance: none;
     border-radius: 0.25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.form_control:focus {
+    border-color: #80bdff;
+    outline: none;
+    box-shadow: 0 0 5px rgb(128 189 255 / 50%);
 }
 
 .forms_flex textarea {
@@ -95,19 +134,69 @@ p {
     resize: vertical;
 }
 
+.form_p_btn {
+    margin-top: 20px;
+    text-align: center;
+}
 
+.form_btn{
+    font-family: "Poppins", sans-serif;
+    padding: 12px 45px;
+    font-size: 20px;
+    font-weight: 500;
+    border: 2px solid #20c997;
+    border-radius: 28px;
+    transition: all 0.5s ease;
+    display: inline-block;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    color: #20c997;
+    margin-top: 10px;
+    background-color: #212529;
+}
+
+.form_btn:hover {
+    background-color: #20c997;
+    border-color: #20c997;
+    color: #fff;
+}
+
+
+
+
+@media (max-width: 1350px) {
+    .form_name_input,
+    .form_email_input {
+        flex: 0 0 auto;
+        width: 100%;
+    }
+    .form_email_input {
+        margin-left: 0;
+    }
+}
 
 @media screen and (max-width: 750px) {
     .form_items {
         flex-direction: column;
-        justify-content: center;
+        align-items: center;
     }
     .forms {
+        order: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 30px;
     }
-    
+
+    .form_info {
+        order: 1;
+        text-align: center;
+        width: 100%;
+    }
+
     .form_info_address {
         text-align: center;
     }
@@ -115,4 +204,13 @@ p {
     .form_main {
         width: 70%;
     }
+
+    .form_info_email {
+        font-size: 20px;
+    }
+
+    .follow {
+        justify-content: center;
+    }
 }
+
