--- a/src/Content/AboutMe/AboutMe.module.css
+++ b/src/Content/AboutMe/AboutMe.module.css
@@ -9,6 +9,8 @@
 .about_me_container {
     margin: 0 auto;
     width: 90%;
+    padding-bottom: 60px;
+    padding-top: 40px;
 }
 
 .about_me_content {
@@ -101,5 +103,42 @@
     background-color: #1baa80;
     border-color: #1baa80;
 }
+
+@media screen and (max-width: 750px) {
+    .about_me_info_form ul a {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .about_me_info {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .about_me_info_text {
+        width: 80%;
+    }
+    .about_me_info_form {
+        width: 80%;
+        text-align: center;
+    }
+
+    .about_me_info_form ul a {
+        font-size: 16px;
+    }
+
+    .about_me_info_form ul {
+        margin-top: 30px;
+        padding-left: 0;
+    }
+
+    .about_me_btn {
+        margin-top: 30px;
+        margin-left: 0;
+    }
+}
+
 
 
