--- a/src/Content/MyWorks/MyWorks.module.scss
+++ b/src/Content/MyWorks/MyWorks.module.scss
@@ -1,17 +1,21 @@
 .my_works {
     background-color: #343a40;
-    padding-bottom: 50px;
+    padding-top: 40px;
+    padding-bottom: 80px;
 
     .my_works_container {
         margin: 0 auto;
         width: 80%;
 
         .my_works_items {
+            margin-top: 30px;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
 
             @media screen and (max-width: 1000px) {
+                flex-direction: column;
+                align-items: center;
                 justify-content: center;
             }
         }
