--- a/src/Content/Services/Services.module.css
+++ b/src/Content/Services/Services.module.css
@@ -1,24 +1,38 @@
 .services {
+    font-family: "Poppins", sans-serif;
     background-color: #212529;
+    position: relative;
+    color: #4c4d4d;
 }
 
 .services_container {
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
+    padding-top: 50px;
+    padding-bottom: 80px;
 }
 
-.services_title {
-    text-align: center;
-}
-
-.services_item {
+.services_items_container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
-@media screen and (max-width: 1020px) {
-    .services_item {
-        justify-content: center;
+.services_items_container_flex {
+    flex: 0 0 auto;
+    width: 91.66667%;
+}
+
+/*///////////////////////////////////////////////////////////media*/
+@media screen and (max-width: 850px) {
+    .services_items_container_flex {
+        /*flex: 0 0 auto;*/
+        /*width: 91.66667%;*/
+        /*justify-content: center;*/
+        flex-wrap: wrap;
     }
 }
