--- a/src/common/components/HeaderSection.module.css
+++ b/src/common/components/HeaderSection.module.css
@@ -51,3 +51,12 @@
         display: none;
     }
 }
+
+@media screen and (max-width: 450px) {
+    .header_section_title {
+        font-size: 50px;
+    }
+    .header_section::before {
+        display: none;
+    }
+}
